--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
-...FULL CODE...
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8" />
+<title>Infinity G1 – Single File Hub</title>
+
+<style>
+body { background:#111; color:#eee; font-family:Arial; margin:0; padding:20px; }
+h1 { margin-top:0; font-size:26px; }
+.box { background:#222; padding:15px; margin:20px 0; border-radius:8px; }
+button { background:#0af; color:#000; padding:10px 16px; border:none; border-radius:6px; font-weight:bold; cursor:pointer; }
+#log { background:#000; padding:10px; border-radius:8px; white-space:pre-wrap; margin-top:20px; }
+a { color:#0af; display:block; margin:6px 0; text-decoration:none; }
+</style>
+
+</head>
+<body>
+
+<h1>Infinity Hub – G1</h1>
+<p>This is your active G1 page. It generates new pages inside the repo automatically.</p>
+
+<div class="box">
+  <h3>Upload New Pages</h3>
+  <input type="file" id="fileInput" multiple>
+  <button onclick="uploadFiles()">Upload</button>
+  <button onclick="saveState()">Save</button>
+</div>
+
+<h3>Generated Pages</h3>
+<div id="pagesList"></div>
+
+<pre id="log"></pre>
+
+<script>
+// BASIC CONFIG FOR YOUR REPO
+const user = "pewpi-infinity";
+const repo = "g";
+const token = "";  // leave blank for public pushes
+const api = `https://api.github.com/repos/${user}/${repo}/contents/`;
+
+// Write text into the log box
+function log(msg){
+  document.getElementById("log").textContent += msg + "\\n";
+}
+
+// Load the /pages folder and display links
+async function loadPages(){
+  let res = await fetch(api + "pages");
+  if(!res.ok){ log("No pages yet."); return; }
+
+  let files = await res.json();
+  let out = document.getElementById("pagesList");
+  out.innerHTML = "";
+
+  files.forEach(f=>{
+    let a = document.createElement("a");
+    a.href = "pages/" + f.name;
+    a.textContent = f.name;
+    a.target = "_blank";
+    out.appendChild(a);
+  });
+}
+
+// Upload page files
+async function uploadFiles(){
+  let files = document.getElementById("fileInput").files;
+  for(let f of files){
+    let txt = await f.text();
+    let encoded = btoa(unescape(encodeURIComponent(txt)));
+    let path = "pages/" + f.name;
+
+    let res = await fetch(api + path, {
+      method: "PUT",
+      headers: {
+        "Authorization": token ? `token ${token}` : undefined,
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({
+        message: "Add " + f.name,
+        content: encoded
+      })
+    });
+
+    if(res.ok) log("Uploaded: " + f.name);
+    else log("FAILED: " + f.name);
+  }
+  loadPages();
+}
+
+// Save state.txt watcher file
+async function saveState(){
+  let data = "saved=" + Date.now();
+  let encoded = btoa(unescape(encodeURIComponent(data)));
+  let path = "state.txt";
+
+  let existing = await fetch(api + path);
+  let sha = existing.ok ? (await existing.json()).sha : null;
+
+  let res = await fetch(api + path, {
+    method: "PUT",
+    headers: { "Authorization": token ? `token ${token}` : undefined },
+    body: JSON.stringify({
+      message: "State updated",
+      content: encoded,
+      sha
+    })
+  });
+
+  if(res.ok) log("State saved.");
+  else log("State FAILED.");
+}
+
+loadPages();
+</script>
+
+</body>
+</html>
