--- a/index.html
+++ b/index.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
-<title>Tortoise.os – Infinity G Environment</title>
-
-<!-- Main OS Styles -->
-<link rel="stylesheet" href="../ui/style.css">
-<link rel="stylesheet" href="../ui/terminal.css">
-
-<!-- Core Engine -->
-<script src="engine.js"></script>
-<script src="admin.js"></script>
-
-<!-- Core Modules -->
-<script src="../modules/pages.js"></script>
-<script src="../modules/uploader.js"></script>
-<script src="../modules/wallet.js"></script>
-<script src="../modules/watcher.js"></script>
-<script src="../modules/terminal.js"></script>
-
+<meta charset="UTF-8"/>
+<title>Tortoise.OS – Infinity G Environment</title>
+<style>
+body {
+    background:#000;
+    color:white;
+    font-family:Arial, sans-serif;
+    text-align:center;
+    padding:40px;
+}
+#infinity-crystal {
+    width:200px;
+    height:200px;
+    margin:40px auto;
+    border-radius:50%;
+    background: radial-gradient(circle at 30% 30%, #7afffb, #005b96);
+    box-shadow:0 0 40px #00c8ff;
+    animation:pulse 6s ease-in-out infinite,
+               shift 12s linear infinite;
+}
+@keyframes pulse {
+    0% { transform:scale(1); box-shadow:0 0 30px #00c8ff; }
+    50% { transform:scale(1.15); box-shadow:0 0 70px #42f5e9; }
+    100% { transform:scale(1); box-shadow:0 0 30px #00c8ff; }
+}
+@keyframes shift {
+    0% { background:radial-gradient(circle at 30% 30%, #7afffb, #005b96); }
+    25% { background:radial-gradient(circle at 70% 40%, #baff7a, #006e4f); }
+    50% { background:radial-gradient(circle at 40% 70%, #ff7ad7, #56005e); }
+    75% { background:radial-gradient(circle at 60% 30%, #ffd77a, #7a2e00); }
+    100% { background:radial-gradient(circle at 30% 30%, #7afffb, #005b96); }
+}
+</style>
 </head>
 <body>
 
-<!-- ========================
-        TORTOISE.OS BOOT
-========================= -->
+<h1>Tortoise.OS</h1>
+<div>Infinity G Hybrid Boot</div>
 
-<div id="os-container">
-
-    <div id="os-header">
-        <h1>Tortoise.os</h1>
-        <span class="sub">Infinity G Hybrid Operating Shell</span>
-    </div>
-
-    <div id="os-main">
-        <!-- Dynamic OS Content Gets Injected Here by engine.js -->
-    </div>
-
-    <!-- Always-Visible Terminal -->
-    <div id="os-terminal"></div>
-
-</div>
+<div id="infinity-crystal"></div>
 
 </body>
 </html>
