--- a/index.html
+++ b/index.html
@@ -1,140 +1,1 @@
-<!DOCTYPE html>
-[core]
-	repositoryformatversion = 0
-	filemode = true
-	bare = false
-	logallrefupdates = true
-[remote "origin"]
-	url = https://github.com/pewpi-infinity/infinity-brain-111.git
-	fetch = +refs/heads/main:refs/remotes/origin/main
-[branch "main"]
-	remote = origin
-	merge = refs/heads/main
-<!-- 🐶 PEWPI SIGN-IN (GLOBAL) -->
-<div id="pewpi-gate">
-  <h1>🐶 pewpi</h1>
-  <input id="pewpi_user" placeholder="Handle">
-  <button onclick="pewpiUnlock()">Enter</button>
-</div>
-<script>
-function pewpiUnlock(){
-  localStorage.setItem("pewpi_user", document.getElementById("pewpi_user").value);
-  document.getElementById("pewpi-gate").style.display="none";
-  document.body.classList.add("pewpi-live");
-}
-if(localStorage.getItem("pewpi_user")){
-  document.addEventListener("DOMContentLoaded",()=>{
-    const g=document.getElementById("pewpi-gate");
-    if(g) g.style.display="none";
-    document.body.classList.add("pewpi-live");
-  });
-}
-</script>
-<style>
-#pewpi-gate{position:fixed;inset:0;background:#0e0e0e;color:#fff;display:flex;flex-direction:column;align-items:center;justify-content:center;z-index:9999}
-#pewpi-gate button{background:#ff69b4;border:0;padding:10px 18px}
-body:not(.pewpi-live)>*:not(#pewpi-gate){filter:blur(6px);pointer-events:none}
-</style>
-<html>
-<head>
-<meta charset="UTF-8"/>
-<title>∞ g</title>
-<style>
-body {
-    background:#000;
-    color:white;
-    font-family:Arial, sans-serif;
-    text-align:center;
-    padding:40px;
-}
-#infinity-crystal {
-    width:200px;
-    height:200px;
-    margin:40px auto;
-    border-radius:50%;
-    background: radial-gradient(circle at 30% 30%, #7afffb, #005b96);
-    box-shadow:0 0 40px #00c8ff;
-    animation:pulse 6s ease-in-out infinite,
-               shift 12s linear infinite;
-}
-@keyframes pulse {
-    0% { transform:scale(1); box-shadow:0 0 30px #00c8ff; }
-    50% { transform:scale(1.15); box-shadow:0 0 70px #42f5e9; }
-    100% { transform:scale(1); box-shadow:0 0 30px #00c8ff; }
-}
-@keyframes shift {
-    0% { background:radial-gradient(circle at 30% 30%, #7afffb, #005b96); }
-    25% { background:radial-gradient(circle at 70% 40%, #baff7a, #006e4f); }
-    50% { background:radial-gradient(circle at 40% 70%, #ff7ad7, #56005e); }
-    75% { background:radial-gradient(circle at 60% 30%, #ffd77a, #7a2e00); }
-    100% { background:radial-gradient(circle at 30% 30%, #7afffb, #005b96); }
-}
-</style>
-</head>
-<body>
-
-<h1>Tortoise.OS</h1>
-<div>Infinity G Hybrid Boot</div>
-
-<div id="infinity-crystal"></div>
-
-</body>
-</html>
-<!-- C14_TOKEN_PANEL_START -->
-<div style="font-family:monospace;background:#0b0f14;color:#e6edf3;padding:16px;margin:16px 0">
-  <div style="font-size:2.4em;color:#ffd700;text-align:center">
-    🧱🍄⭐ Token Value: 30
-  </div>
-
-  <p style="text-align:center">
-    🧱 Base &nbsp; 🍄 Growth &nbsp; ⭐ Star Power
-  </p>
-
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="get" target="_blank">
-    <input type="hidden" name="cmd" value="_xclick">
-    <input type="hidden" name="business" value="watsonkris61@gmail.com">
-    <input type="hidden" name="item_name" value="g Token">
-    <input type="hidden" name="amount" value="30">
-    <input type="hidden" name="currency_code" value="USD">
-    <button style="width:100%;padding:14px;font-size:1em">
-      Pay $30 via PayPal
-    </button>
-  </form>
-
-  <p style="font-size:0.75em;text-align:center;margin-top:10px">
-    Repository owner: pewpi-infinity<br/>
-    Contact: marvaseater@gmail.com<br/>
-    Settlement handled externally via PayPal
-  </p>
-</div>
-<!-- C14_TOKEN_PANEL_END -->
-
-
-<!-- INDEX_VALUE_START -->
-<div class="box">
-<h2>🧱 Index License Token</h2>
-<p><strong>Operator:</strong> Kris Watson</p>
-<p><strong>License Value (monotonic):</strong> $110 USD</p>
-<p><small>Value increases daily via Infinity Plus + Mongoose growth.</small></p>
-<form action="https://www.paypal.com/paypalme/marvaseater@gmail.com/110" method="get" target="_blank">
-  <button type="submit">Buy License Token</button>
-</form>
-<p><small>Token grants right to display/use/operate this index for business. No ownership transfer.</small></p>
-<p><small>Contact: 808-342-9974</small></p>
-</div>
-<!-- INDEX_VALUE_END -->
-
-<!-- C13B0:MAP_VIEWER -->
-<section>
-  <h3>🧱🔗🧱 Infinity Ecosystem</h3>
-  <select onchange="location=this.value">
-    <!-- populated by bots -->
-  </select>
-</section>
-
-<!-- C13B0:PAYPAL_BLOCK -->
-<section>
-  <h3>🧱💰🧱 Acquire Access License</h3>
-  <p>Starting price shown below. Value increases with growth.</p>
-  <button>Buy Now (PayPal)</button>
-</section>
+<!doctype html><html><head><meta charset="utf-8"><title>∞</title></head><body>∞</body></html>
