Add hamburger menu v1.0

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ body {
     100% { background:radial-gradient(circle at 30% 30%, #7afffb, #005b96); }
 }
 </style>
+<script defer src="https://pewpi-infinity.github.io/infinity-crown-index/js/infinity-menu.js"></script>
 </head>
 <body>
 
